Fixed some colors and scrollbar on code sections

--- a/css/highlight-styles/obsidian.css
+++ b/css/highlight-styles/obsidian.css
@@ -11,8 +11,45 @@
     border-radius: 5px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.8);
     font-size: 15px;
+    overflow: auto;
 }
 
+/* Scrollbar stuff*/
+.hljs::-webkit-scrollbar {
+  width: 5px;
+  height: 5px;
+}
+.hljs::-webkit-scrollbar-button {
+  width: 0px;
+  height: 0px;
+}
+.hljs::-webkit-scrollbar-thumb {
+  background: #e1e1e1;
+  border: 0px none #ffffff;
+  border-radius: 50px;
+}
+.hljs::-webkit-scrollbar-thumb:hover {
+  background: #ffffff;
+}
+.hljs::-webkit-scrollbar-thumb:active {
+  background: #000000;
+}
+.hljs::-webkit-scrollbar-track {
+  background: #666666;
+  border: 0px none #ffffff;
+  border-radius: 50px;
+}
+.hljs::-webkit-scrollbar-track:hover {
+  background: #666666;
+}
+.hljs::-webkit-scrollbar-track:active {
+  background: #333333;
+}
+.hljs::-webkit-scrollbar-corner {
+  background: transparent;
+}
+
+/* Code keywords*/
 .hljs-keyword,
 .hljs-literal,
 .hljs-change,
@@ -24,6 +61,10 @@
 .css .hljs-id,
 .tex .hljs-special {
     color: #93C763;
+}
+
+.hljs-function {
+    color: #A082BD;
 }
 
 .hljs-number {
